--- a/devops/compose/open-access-fund-local-dev/compose.yaml
+++ b/devops/compose/open-access-fund-local-dev/compose.yaml
@@ -1,3 +1,5 @@
+x-variables:
+  main-image: &main-image localhost/local-dev/open-access-fund:local-dev
 services:
   db:
     image: postgres:17
@@ -10,5 +12,35 @@ services:
     image: adminer:5
     ports:
       - ${ADMINER_HOST_PORT:-8080}:8080
+  migration-db:
+    image: mysql:8
+    environment:
+      MYSQL_ROOT_PASSWORD: localhost
+      MYSQL_DATABASE: bigsys
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: localhost
+    volumes:
+      - migration-db-data:/var/lib/mysql
+      - ../../../services/migration/data:/docker-entrypoint-initdb.d
+  migration:
+    image: *main-image
+    environment:
+      MYSQL_DATABASE: bigsys
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: localhost
+      MYSQL_HOST: migration-db
+      MYSQL_PORT: 3306
+      PGUSER: 'postgres'
+      PGHOST: 'db'
+      PGDATABASE: 'postgres'
+      PGPASSWORD: 'localhost'
+      PGPORT: 5432
+    depends_on:
+      - migration-db
+      - db
+    volumes:
+      - ../../../services:/services
+      - /services/node_modules
 volumes:
   db-data:
+  migration-db-data:
