--- a/services/package.json
+++ b/services/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ucd-lib/logger": "^0.0.7",
-    "mysql2": "^3.14.3"
+    "he": "^1.2.0",
+    "mysql2": "^3.14.3",
+    "pg": "^8.16.3"
   }
 }
