--- a/services/package.json
+++ b/services/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-access-fund-base-image",
+  "name": "open-access-fund",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -7,12 +7,31 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "migrate": "node ./migration/index.js"
+    "migrate": "node ./migration/index.js",
+    "start-submission-dev": "cd ./client/submission-dev && http-server -c-1 -p 8080",
+    "start-admin-app": "node ./client/index.js",
+    "client-watch": "cd ./client/build && webpack --config webpack-watch.config.js --watch",
+    "client-build-dev": "cd ./client/build && webpack --config webpack-watch.config.js",
+    "client-build-dist": "cd ./client/build && webpack --config webpack-dist.config.js"
   },
   "dependencies": {
+    "@ucd-lib/cork-app-build": "^0.5.0",
+    "@ucd-lib/cork-app-state": "^3.0.1",
+    "@ucd-lib/cork-app-utils": "^6.3.1",
+    "@ucd-lib/cork-icon": "^1.0.2",
     "@ucd-lib/logger": "^0.0.7",
+    "@ucd-lib/spa-router-middleware": "^0.2.3",
+    "@ucd-lib/theme-elements": "^3.2.0",
+    "@ucd-lib/theme-sass": "^6.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "fs-extra": "^11.3.0",
     "he": "^1.2.0",
+    "http-server": "^14.1.1",
+    "lit": "^3.3.1",
     "mysql2": "^3.14.3",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^5.1.4"
   }
 }
