--- a/services/package.json
+++ b/services/package.json
@@ -33,6 +33,7 @@
     "mysql2": "^3.14.3",
     "pg": "^8.16.3",
     "webpack": "^5.99.9",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "zod": "^4.1.5"
   }
 }
