--- a/services/package.json
+++ b/services/package.json
@@ -29,6 +29,8 @@
     "fs-extra": "^11.3.0",
     "he": "^1.2.0",
     "http-server": "^14.1.1",
+    "jwt-decode": "^4.0.0",
+    "keycloak-js": "^26.2.0",
     "lit": "^3.3.1",
     "mysql2": "^3.14.3",
     "pg": "^8.16.3",
